<?xml version="1.0"?>
<package format="2">
  <name>theta_theta_description</name>
  <version>0.0.0</version>
  <description>The theta_theta_description package</description>

  <maintainer email="narcis.paloameras@udg.edu">narcis</maintainer>

  <license>BSD</license>


  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <export>

  </export>
</package>
